テスト/src/objects/account_SFO__c.object
<CustomObject>
    <fields>
        <fullName>TEIKOKU_code__c</fullName>
        <label>帝国企業コード</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <label>住所</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>building__c</fullName>
        <label>建物名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>市区町村</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fax__c</fullName>
        <label>FAX番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>kananame__c</fullName>
        <label>企業名カナ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mailaddress__c</fullName>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>企業名</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>postalcode__c</fullName>
        <inlineHelpText>7桁の半角数値のみ入力してください</inlineHelpText>
        <label>郵便番号</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>states__c</fullName>
        <label>都道府県</label>
        <picklist>
            <picklistValues>
                <fullName>北海道</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>青森県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>岩手県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宮城県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>秋田県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>山形県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福島県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>茨城県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>栃木県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>群馬県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>埼玉県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>千葉県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>東京都</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>神奈川県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>新潟県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>富山県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>石川県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福井県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>山梨県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>長野県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>岐阜県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>静岡県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>愛知県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>三重県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>滋賀県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>京都府</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>大阪府</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>兵庫県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>奈良県</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>和歌山県</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>企業</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>name__c</columns>
        <columns>states__c</columns>
        <columns>city__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>AC{yymmdd}{000}</displayFormat>
        <label>企業コード</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_postalcode</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISBLANK ( postalcode__c ) = FALSE , OR ( ISNUMBER ( postalcode__c ) = FALSE , LEN( postalcode__c ) &lt;&gt; 7 ) )</errorConditionFormula>
        <errorDisplayField>postalcode__c</errorDisplayField>
        <errorMessage>郵便番号は7桁の半角数値で入力してください</errorMessage>
    </validationRules>
</CustomObject>